# policyagent

./: .gitignore  MOBILE_INTERFACE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
backend/: app.py  main.py  pyproject.toml  test_websocket.py
frontend/: NEGOTIATION_SETUP.md  index.html  negotiation.html  package-lock.json  package.json  vite.negotiation.config.js
frontend/src/: App.css  App.jsx  index.css  negotiation-main.jsx
frontend/src/components/: AtomIcon.css  AtomIcon.jsx  ChatInterface.css  ChatInterface.jsx  DemoQuestions.css  DemoQuestions.jsx  InitialInput.css  InitialInput.jsx  NegotiationView.jsx  NegotiationView.module.css  NegotiationVisualization.css  NegotiationVisualization.jsx  ParticipantForm.css  ParticipantForm.jsx  PreferencesOutput.css  PreferencesOutput.jsx  QuestionCard.css  QuestionCard.jsx  QuestionFlow.css  QuestionFlow.jsx  SplashScreen.css  SplashScreen.jsx  SwipeableQuestions.css  SwipeableQuestions.jsx  VoiceInput.css  VoiceInput.jsx
frontend/src/components/questions/: Question1Survival.css  Question1Survival.jsx  Question2SafetyTrade.css  Question2SafetyTrade.jsx  Question3StaffDilemma.css  Question3StaffDilemma.jsx
user-agent-api/: README.md  main.py  pyproject.toml  run.sh
